---
config:
  layout: elk
  elk:
    nodePlacementStrategy: NETWORK_SIMPLEX
---
erDiagram

    %% =========================
    %% Pacientes y tratamientos
    %% =========================

    PATIENTS }o--|| OS : covers
    PATIENT_STATE ||--o{ PATIENTS : has
    PATIENTS ||--o{ PATIENTS_SEDE : serves
    PATIENTS_SEDE }o--|| SEDE : includes

    PATIENTS ||--o{ PATIENT_STATE_HISTORY : has
    PATIENT_STATE ||--o{ PATIENT_STATE_HISTORY : records
    PATIENTS ||--o{ AUTHORIZATIONS : has

    PATIENTS ||--o| PATIENT_ADDRESSES : tiene
    PATIENTS ||--o{ PATIENT_CONTACTS : tiene
    PATIENTS ||--o| PATIENT_EDUCATION : cursa
    PATIENTS ||--o{ PATIENT_ANNUAL_DOCS : gestiona

    PATIENTS ||--o{ TREATMENT_PLANS : has
    TREATMENT_PLANS ||--o{ TREATMENT_PLAN_ITEMS : includes
    TREATMENT_PLAN_ITEMS }o--|| TREATMENTS : contains
    TREATMENT_PLANS ||--o{ PATIENT_RECORDS : generates
    PATIENTS ||--o{ PATIENT_RECORDS : has
    PATIENT_RECORDS ||--o{ PATIENT_DOCUMENTS : contains
    PATIENT_DOCUMENTS }o--|| DOCUMENTS_TYPE : classifies

    PATIENTS ||--o{ PATIENT_TREATMENTS : has
    PATIENT_TREATMENTS }o--|| TREATMENTS : includes
    PATIENTS ||--o{ PATIENT_TURNS : schedules
    PATIENT_TURNS }o--|| TREATMENTS : applies_to
    PATIENTS ||--o{ PATIENT_TURNS_MONTHLY : schedules
    PATIENT_TURNS_MONTHLY }o--|| TREATMENTS : applies_to
    PATIENTS ||--o{ PATIENT_TURNS_OVERRIDES : overrides
    PATIENT_TURNS_OVERRIDES }o--|| TREATMENTS : applies_to
    PATIENTS ||--o{ ATTENDANCES : attends
    ATTENDANCES }o--|| TREATMENTS : belongs_to

    PATIENTS ||--o{ PACIENT_REPORTS : has
    PACIENT_REPORTS }o--|| REPORT_TYPES : categorizes

    PATIENTS ||--o{ PATIENT_REQUESTS : requests
    PATIENT_REQUESTS ||--o{ PATIENT_REQUEST_TREATMENTS : includes
    PATIENT_REQUEST_TREATMENTS }o--|| TREATMENTS : requested

    %% =========================
    %% Usuarios y autenticacion
    %% =========================

    USER_ROLES }o--|| ROLES : assigned
    USER_ROLES }o--|| USERS : has
    USERS ||--o{ SESSIONS : owns
    USERS ||--o{ USER_ACTIVITY_LOGS : generates

    %% =========================
    %% Admision de pacientes
    %% =========================

    PATIENTS ||--o{ ADMISSIONS : results_in
    ADMISSIONS ||--o{ ADMISSION_FISIATRIC_REVIEW : receives
    ADMISSIONS ||--o{ ADMISSION_DOCUMENTS : contains

    %% =========================
    %% Modulos y facturacion
    %% =========================

    MODULE_PATIENT }o--|| MODULE : assigns
    PATIENTS ||--o{ MODULE_PATIENT : belongs_to
    PATIENTS ||--o{ INVOICE : has
    INVOICE }o--|| INVOICE_TYPE : classifies
    INVOICE }o--|| INVOICE_STATUS : has_status
    MODULE_PATIENT ||--o{ INVOICE : generates

    %% =========================
    %% Catalogos
    %% =========================

    OS {
        bigint id PK
        string name UK
    }
    SEDE {
        bigint id PK
        string name UK
    }
    TREATMENTS {
        bigint id PK
        string name UK
    }
    PATIENT_STATE {
        bigint id PK
        string name UK
    }
    REPORT_TYPES {
        bigint id PK
        string name UK
    }
    DOCUMENTS_TYPE {
        bigint id PK
        string description UK
    }
    ROLES {
        bigint id PK
        string name UK
    }

    %% =========================
    %% Usuarios y autenticacion
    %% =========================

    USERS {
        bigint id PK
        string username UK
        string password_hash
        boolean is_admin
        timestamptz created_at
    }
    USER_ROLES {
        bigint user_rol_id PK
        bigint user_id FK
        bigint role_id FK
    }
    SESSIONS {
        string token PK
        bigint user_id FK
        timestamptz expires_at
        timestamptz created_at
    }
    USER_ACTIVITY_LOGS {
        bigint id PK
        bigint actor_user_id FK
        string actor_username
        string action_type
        string entity_type
        string entity_id
        string entity_label
        string details
        timestamptz created_at
    }
    login_rate_limits {
        string scope_key PK
        int failed_count
        timestamptz blocked_until
        timestamptz updated_at
    }

    %% =========================
    %% Pacientes y tratamientos
    %% =========================

    PATIENTS {
        string patient_id PK
        string first_name
        string last_name
        string dni
        string cuit
        date birth_date
        string condition
        string diagnosis
        date last_visit
        date last_fisiatrico
        date last_fisiatrico_alta
        boolean is_active
        boolean is_discharged
        bigint os_id FK
        date authorization_expires_at
        string affiliate_number
        bigint patient_state_id FK
        timestamptz discharged_at
        text notes
        timestamptz created_at
    }
    PATIENT_ADDRESSES {
        bigserial id PK
        string patient_id FK
        string street
        string number
        string neighborhood
        string floor
        string sector
    }
    PATIENT_CONTACTS {
        bigserial id PK
        string patient_id FK
        string full_name
        string relationship
        string phone
        boolean is_primary
    }
    PATIENT_EDUCATION {
        bigserial id PK
        string patient_id FK
        string school_name
        string grade
        string shift
        string integration_schedule
    }
    PATIENT_ANNUAL_DOCS {
        bigserial id PK
        string patient_id FK
        string doc_type
        int year
        string status
    }
    PATIENTS_SEDE {
        bigint patient_sede_id PK
        string patient_id FK
        bigint sede_id FK
    }
    PATIENT_STATE_HISTORY {
        bigint id PK
        string patient_id FK
        bigint state_id FK
        string reason
        timestamptz created_at
    }
    AUTHORIZATIONS {
        bigint id PK
        string patient_id FK
        string status
        string rejection_reason
        date authorization_date
        timestamptz created_at
    }
    TREATMENT_PLANS {
        bigint id PK
        string patient_id FK
        date start_date
        date end_date
        string note
        timestamptz created_at
    }
    PATIENT_RECORDS {
        bigint id PK
        string patient_id FK
        bigint treatment_plan_id FK
        string shipment_type
        date shipment_date
        timestamptz created_at
    }
    TREATMENT_PLAN_ITEMS {
        bigint treatment_id PK, FK
        bigint treatment_plan_id PK, FK
    }
    PATIENT_DOCUMENTS {
        bigint id PK
        bigint patient_record_id FK
        bigint document_type FK
        string file_path
        timestamptz uploaded_at
    }
    PACIENT_REPORTS {
        bigint id PK
        string patient_id FK
        bigint report_type_id FK
        date report_date
        string report_type
        string content
        timestamptz created_at
    }
    PATIENT_TREATMENTS {
        bigint patient_treatment_id PK
        string patient_id FK
        bigint treatment_id FK
    }
    PATIENT_TURNS {
        string patient_id PK, FK
        bigint treatment_id PK, FK
        string day_of_week PK
        time time PK
    }
    PATIENT_TURNS_MONTHLY {
        string patient_id PK, FK
        bigint treatment_id PK, FK
        int month PK
        string day_of_week PK
        time time PK
    }
    PATIENT_TURNS_OVERRIDES {
        string patient_id PK, FK
        bigint treatment_id PK, FK
        date date PK
        time time PK
        boolean active
    }
    ATTENDANCES {
        bigint id PK
        string patient_id FK
        date date
        bigint treatment_id FK
        string note
        timestamptz created_at
    }
    PATIENT_REQUESTS {
        bigint patient_req_id PK
        string patient_id FK
        date start_date
        date end_date
        boolean apply_treatments
        timestamptz applied_at
        timestamptz created_at
        timestamptz updated_at
    }
    PATIENT_REQUEST_TREATMENTS {
        bigint patient_req_treatments PK
        bigint request_id FK
        bigint treatment_id FK
    }

    %% =========================
    %% Admision de pacientes
    %% =========================

    ADMISSIONS {
        bigint id PK
        string first_name
        string last_name
        date birth_date
        string dni
        string phone
        string address
        boolean tiene_obra_social
        string obra_social_nombre
        boolean tiene_cud
        string estado
        string patient_id FK
        timestamptz created_at
        timestamptz updated_at
    }
    ADMISSION_FISIATRIC_REVIEW {
        bigint id PK
        bigint admission_id FK
        date fecha_turno
        string resultado
        string devolucion
        string reviewed_by
        timestamptz created_at
    }
    ADMISSION_DOCUMENTS {
        bigint id PK
        bigint admission_id FK
        string dni_numero
        string numero_afiliado
        bytea carnet_pdf
        bytea cud_pdf
        bytea consentimiento_padres_pdf
        bytea presupuesto_pdf
        bytea informe_inicial_pdf
        bytea plan_trabajo_pdf
        bytea resumen_historial_pdf
        bytea pedidos_medicos_pdf
        timestamptz created_at
        timestamptz updated_at
    }

    %% =========================
    %% Modulos y facturacion
    %% =========================

    MODULE {
        bigint id PK
        string description UK
    }
    MODULE_PATIENT {
        bigint id PK
        string patient_id FK
        bigint module_id FK
    }
    INVOICE_STATUS {
        bigint id PK
        string description
    }
    INVOICE_TYPE {
        bigint id PK
        string description
    }
    INVOICE {
        bigint id PK
        string patient_id FK
        decimal amount
        bigint invoice_type_id FK
        date payment_date
        bigint module_id FK
        bigint invoice_status_id FK
        timestamptz created_at
        timestamptz updated_at
    }
